fix unnecessary scrollbar

--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -7,7 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-body, html, #root {
+body, html {
   width: 100%;
   height: 100%;
 }
